# IFoo

./: CMakeLists.txt
release/: CMakeLists.txt
release/src/: CMakeLists.txt  IFoo.idl
